--- a/mystyle2.css
+++ b/mystyle2.css
@@ -1,5 +1,5 @@
 body {
-background-color:#0abab5;
+background-color:#D3D3D3;
 }
 h1 { 
 color:black;
@@ -46,3 +46,12 @@ color:black;
   background-color:#4CAF50;
   color: white;
 }
+h3 {
+font-size:30px;	
+}
+h4 {
+font-size:30px;
+}
+h5 {
+font-size:30px;
+}	
