--- a/mystyle3.css
+++ b/mystyle3.css
@@ -1,5 +1,5 @@
 body {
-background-color:#0abab5;
+background-color:#D3D3D3;
 }
 h1 { 
 color:black;
@@ -50,4 +50,10 @@ color:black;
 .topnav a.active {
   background-color:#4CAF50;
   color: white;
+}
+h3{
+font-size:25px;
+}
+h4 {
+font-size:25px;
 }
