--- a/mystyle5.css
+++ b/mystyle5.css
@@ -1,5 +1,5 @@
 body {
-background-color:#0abab5;
+background-color:#D3D3D3;
 }
 h1 { 
 color:black;
@@ -51,3 +51,15 @@ color:black;
   background-color:#4CAF50;
   color: white;
 }
+h2 {
+font-size:25px;
+}
+h3 {
+font-size:25px;
+}
+h4 {
+font-size:25px;
+}
+h5 {
+font-size:25px;
+}	
