--- a/mystyle7.css
+++ b/mystyle7.css
@@ -51,3 +51,15 @@ color:black;
   background-color:#4CAF50;
   color: white;
 }
+h2 {
+font-size:25px;
+}
+h3 {
+font-size:25px;
+}
+h4 {
+font-size:25px;
+}
+h5 {
+font-size:25px;
+}	
