--- a/mystyle8.css
+++ b/mystyle8.css
@@ -80,7 +80,7 @@ th {
     padding: 1em;
     border-width: 1px; 
     border-style: solid;
-    border-color:white;
+    border-color:black;
     margin: 10px !important;
    }   
 td { 
@@ -89,7 +89,7 @@ td {
     padding: 1em;
     border-width: 1px; 
     border-style: solid;
-    border-color:white;
+    border-color:black;
     margin: 10px !important;
    }   
 
